// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell Snapshot Tests correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Cell
    columnId="column-test"
    rowId="row-test"
    sectionId="section-test"
    width="123px"
  >
    <div
      className="container orion-fusion-theme"
      role="gridcell"
      style={
        Object {
          "width": "123px",
        }
      }
    >
      <div
        className="content"
      />
    </div>
  </Cell>
</ThemeContextProvider>
`;

exports[`Cell Snapshot Tests should render a Cell in a highlighted column 1`] = `
<div
  className="container"
  role="gridcell"
  style={
    Object {
      "width": "123px",
    }
  }
>
  <div
    className="content highlighted first last"
  >
    <div>
      Child here
    </div>
  </div>
</div>
`;

exports[`Cell Snapshot Tests should render a Cell with all provided props 1`] = `
<div
  aria-selected={true}
  className="container custom-class-name"
  data-custom-attribute={true}
  role="gridcell"
  style={
    Object {
      "width": "123px",
    }
  }
>
  <div
    className="content selectable selected"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex="0"
  >
    <div>
      Child here
    </div>
  </div>
</div>
`;

exports[`Cell Snapshot Tests should render a Cell with minimal props 1`] = `
<div
  className="container"
  role="gridcell"
  style={
    Object {
      "width": "123px",
    }
  }
>
  <div
    className="content"
  />
</div>
`;
